fix: Ajuster la hauteur du popup pour une meilleure visibilité

--- a/reservation.css
+++ b/reservation.css
@@ -386,7 +386,7 @@ body {
 .popup-modal {
   background: white;
   width: 100%;
-  height: 53vh; /* Hauteur réduite de 50vh à 45vh pour remonter le popup */
+  height: 57vh; /* Hauteur réduite de 50vh à 45vh pour remonter le popup */
   border-top-left-radius: 18px; /* Smaller radius */
   border-top-right-radius: 18px;
   position: fixed;
